New enum for all game names. Using game mode to store the current playing game. Card stacking. Some debug stuff in card pile functions. Actually finding ace of spades to add on first turn of I doubt it (this can be improved further)
Created a new enum that holds all potential games including mini games which will be used in the game mode allow easy access for what the current game being played is.

Game mode reference setup in player and NPCs on begin play.
They use this game mode reference in the take turn function to coordinate what to do for each game.

Stopped rat screw start game on begin play since I needed to test I doubt it, please Ben just use debug keys to setup and start games ty.

Setup some debug print strings in the card pile since was creating functionality for stacking cards.

Filled out the rest of the data table with the corresponding static meshes however two of the cards have the same static mesh since I think we created an extra special card after jess had already made the card meshes so might just need to get rid of one of them.

Created a testing material for the cards so can tell they are different which is just a base colour that gets randomised using a dynamic material instance in the card construction script.

When adding a card to the pile they are now stacked on top of each other. This is basic for now and yea but it works.

New function in the I Doubt It game manager called end player turn which does what was being done in the player and npc actors on take turn but instead consolidated in this function so that can change this and it will change it for all characters instead of having to change each individually.

Fixed the function for finding the ace of spades so it actually finds the ace of spades correctly and the character who has it.

--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -295,7 +295,7 @@ Deal To Players=PropertyWrapper.DefaultValueCategory.All Cards
 Deal To Players_5=PropertyWrapper.DefaultValueCategory.All Cards
 Deal Cards=PropertyWrapper.DefaultValueCategory.All Cards
 Deal Cards_4=PropertyWrapper.DefaultValueCategory.All Cards
-SceneComponent=PropertyWrapper.DefaultValueCategory.All Cards
+SceneComponent=
 BillboardComponent=PropertyWrapper.DefaultValueCategory.All Cards
 BP_I_Doubt_It_Game_Manager_C=PropertyWrapper.DefaultValueCategory.All Cards
 K2Node_MacroInstance=PropertyWrapper.DefaultValueCategory.All Cards
@@ -303,7 +303,7 @@ BPC_CurrentHand_C=PropertyWrapper.DefaultValueCategory.All Cards
 End Game=PropertyWrapper.DefaultValueCategory.All Cards
 End Game_6=PropertyWrapper.DefaultValueCategory.All Cards
 BP_NPC_C=PropertyWrapper.DefaultValueCategory.All Cards
-CapsuleComponent=
+CapsuleComponent=PropertyWrapper.DefaultValueCategory.All Cards
 SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.All Cards
 Character=PropertyWrapper.DefaultValueCategory.All Cards
 K2Node_BreakStruct=K2Node_BreakStruct.PinOptions.ShowPinForProperties
@@ -317,6 +317,14 @@ BP_Turn_Manager_C=PropertyWrapper.DefaultValueCategory.All Cards
 StaticMeshActor=PropertyWrapper.DefaultValueCategory.All Cards
 Setup Main Game=PropertyWrapper.DefaultValueCategory.All Cards
 Setup Main Game_2=PropertyWrapper.DefaultValueCategory.All Cards
+Add Card To Pile=PropertyWrapper.DefaultValueCategory.All Cards
+GM_Bar_C=PropertyWrapper.DefaultValueCategory.All Cards
+End Player Turn=PropertyWrapper.DefaultValueCategory.All Cards
+AddCard=PropertyWrapper.DefaultValueCategory.All Cards
+AddCard_1=PropertyWrapper.DefaultValueCategory.All Cards
+Start First Turn=PropertyWrapper.DefaultValueCategory.All Cards
+Start First Turn_4=PropertyWrapper.DefaultValueCategory.All Cards
+StaticMeshComponent=PropertyWrapper.DefaultValueCategory.All Cards
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Shared_Game_Mechanics/Cards
@@ -1581,7 +1589,7 @@ K2Node="\"Object\" "
 EdGraphNode="\"Object\" "
 DataTable="\"Object\" "
 EdGraphNode_Comment="\"Object\" "
-BPC_CurrentHand_C="\"Object\" "
+BPC_CurrentHand_C="\"Object\" \"Object.Default.Current Hand\" "
 BP_Card_Dealer_C=
 BillboardComponent="\"Object\" "
 K2Node_InputDebugKey="\"Object\" "
@@ -1589,64 +1597,87 @@ BP_NPC_C=
 Character=
 Pawn=
 BP_Card_C="\"Object\" "
+InstancedStaticMeshComponent="\"Object\" "
+BP_CardPile_C="\"Object\" \"Object.Default.CardsInPile\" \"Object.Actor.Tags\" "
+PreviewMaterial="\"Object\" "
+Material="\"Object\" "
+MaterialInterface="\"Object\" "
+MaterialExpressionConstant3Vector="\"Object\" "
+MaterialExpression="\"Object\" "
+MaterialExpressionVectorParameter="\"Object\" "
+MaterialExpressionParameter="\"Object\" "
+K2Node_MakeStruct="\"Object\" "
+K2Node_StructMemberSet="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=MaterialEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=EnumEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=EnumEditor
 RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=DataTableEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=
+RecentAssetEditors=DataTableEditor
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 None=======
-OpenAssetsAtExit=/Game/Player/BP_Player.BP_Player
 OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager.BP_Turn_Manager
-OpenAssetsAtExit=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager.BP_Rat_Screw_Game_Manager
-OpenAssetsAtExit=/Game/NPCs/BP_NPC.BP_NPC
 OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BP_Card_Dealer.BP_Card_Dealer
+OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BP_CardPile.BP_CardPile
+OpenAssetsAtExit=/Game/NPCs/BP_NPC.BP_NPC
+OpenAssetsAtExit=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager.BP_I_Doubt_It_Game_Manager
+OpenAssetsAtExit=/Game/Modes_Instances/Modes/GM_Bar.GM_Bar
+OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Enum_All_Game_Names.Enum_All_Game_Names
+OpenAssetsAtExit=/Game/Player/BP_Player.BP_Player
+OpenAssetsAtExit=/Game/Shared_Game_Mechanics/BPI_Playing_Character.BPI_Playing_Character
+OpenAssetsAtExit=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager.BP_Rat_Screw_Game_Manager
+OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BP_Card.BP_Card
+OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/M_Card_Test.M_Card_Test
+OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/DT_Cards.DT_Cards
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
-MRUItem1=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem2=/Game/Shared_Game_Mechanics/Cards/BP_Card_Dealer
-MRUItem3=/Game/Shared_Game_Mechanics/BPI_Playing_Character
-MRUItem4=/Game/Shared_Game_Mechanics/BPC_CurrentHand
-MRUItem5=/Game/Shared_Game_Mechanics/Cards/BP_Card
-MRUItem6=/Game/NPCs/BP_NPC
-MRUItem7=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
-MRUItem8=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager
-MRUItem9=/Game/Player/BP_Player
-MRUItem10=/Game/Shared_Game_Mechanics/Cards/BPI_Card
-MRUItem11=/Game/Main_Game_Managers/Auction/BP_Auction_Game_Manager
-MRUItem12=/Game/Shared_Game_Mechanics/Cards/BP_CardPile
-MRUItem13=/Game/Shared_Game_Mechanics/Cards/Enum_Card_Suits
-MRUItem14=/Game/Shared_Game_Mechanics/Cards/Enum_Card_Names
-MRUItem15=/Game/Shared_Game_Mechanics/Cards/Struct_Card
-MRUItem16=/Game/Shared_Game_Mechanics/Cards/DT_Cards
-MRUItem17=/Game/Main_Game_Managers/Enum_Main_Game_Names
-MRUItem18=/Game/Mini_Games/Enum_Mini_Game_Names
-MRUItem19=/Game/Shared_Game_Mechanics/Turn_Taking/Enum_Turn_Taking_Methods
-MRUItem20=/Game/Player/Input/Actions/IA_Jump
-MRUItem21=/Game/Maps/ThirdPersonMap
-MRUItem22=/Game/Modes_Instances/Modes/GM_Bar
+MRUItem0=/Game/Shared_Game_Mechanics/Cards/DT_Cards
+MRUItem1=/Game/Shared_Game_Mechanics/Cards/M_Card_Test
+MRUItem2=/Game/Shared_Game_Mechanics/Cards/BP_Card
+MRUItem3=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
+MRUItem4=/Game/Shared_Game_Mechanics/BPI_Playing_Character
+MRUItem5=/Game/Player/BP_Player
+MRUItem6=/Game/Shared_Game_Mechanics/Enum_All_Game_Names
+MRUItem7=/Game/Modes_Instances/Modes/GM_Bar
+MRUItem8=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
+MRUItem9=/Game/NPCs/BP_NPC
+MRUItem10=/Game/Shared_Game_Mechanics/Cards/BP_CardPile
+MRUItem11=/Game/Shared_Game_Mechanics/Cards/BP_Card_Dealer
+MRUItem12=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager
+MRUItem13=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem14=/Game/Shared_Game_Mechanics/BPC_CurrentHand
+MRUItem15=/Game/Shared_Game_Mechanics/Cards/BPI_Card
+MRUItem16=/Game/Main_Game_Managers/Auction/BP_Auction_Game_Manager
+MRUItem17=/Game/Shared_Game_Mechanics/Cards/Enum_Card_Suits
+MRUItem18=/Game/Shared_Game_Mechanics/Cards/Enum_Card_Names
+MRUItem19=/Game/Shared_Game_Mechanics/Cards/Struct_Card
+MRUItem20=/Game/Main_Game_Managers/Enum_Main_Game_Names
+MRUItem21=/Game/Mini_Games/Enum_Mini_Game_Names
+MRUItem22=/Game/Shared_Game_Mechanics/Turn_Taking/Enum_Turn_Taking_Methods
+MRUItem23=/Game/Player/Input/Actions/IA_Jump
+MRUItem24=/Game/Maps/ThirdPersonMap
 
 [DetailCategories]
 BP_ThirdPersonCharacter_C.TransformCommon=True
@@ -2398,7 +2429,7 @@ BP_Rat_Screw_Game_Manager_C.Physics=True
 BP_Rat_Screw_Game_Manager_C.WorldPartition=True
 BP_Rat_Screw_Game_Manager_C.Events=True
 BPC_CurrentHand_C.ComponentTick=True
-BPC_CurrentHand_C.Tags=True
+BPC_CurrentHand_C.Tags=False
 BPC_CurrentHand_C.ComponentReplication=True
 BPC_CurrentHand_C.Activation=True
 BPC_CurrentHand_C.Variable=True
@@ -2462,6 +2493,63 @@ BP_Turn_Manager_C.TransformCommon=True
 BP_Turn_Manager_C.Networking=True
 BP_Player_C.Networking=True
 BP_NPC_C.Default=True
+InstancedStaticMeshComponent.Variable=True
+InstancedStaticMeshComponent.TransformCommon=True
+InstancedStaticMeshComponent.Sockets=True
+InstancedStaticMeshComponent.StaticMesh=True
+InstancedStaticMeshComponent.InstancedStaticMeshComponent=True
+InstancedStaticMeshComponent.Culling=True
+InstancedStaticMeshComponent.ComponentTick=True
+InstancedStaticMeshComponent.Physics=True
+InstancedStaticMeshComponent.Collision=True
+InstancedStaticMeshComponent.Lighting=True
+InstancedStaticMeshComponent.Instances=True
+InstancedStaticMeshComponent.Rendering=True
+InstancedStaticMeshComponent.HLOD=True
+InstancedStaticMeshComponent.PathTracing=True
+InstancedStaticMeshComponent.Navigation=True
+InstancedStaticMeshComponent.VirtualTexture=True
+InstancedStaticMeshComponent.Tags=True
+InstancedStaticMeshComponent.ComponentReplication=True
+InstancedStaticMeshComponent.Cooking=True
+InstancedStaticMeshComponent.Events=True
+BP_CardPile_C.TransformCommon=True
+BP_CardPile_C.Networking=True
+BP_CardPile_C.Default=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.PhysicalMaterialMask=True
+PreviewMaterial.Nanite=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.WorldPositionOffset=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.ImportSettings=True
+MaterialExpressionConstant3Vector.MaterialExpressionConstant3Vector=True
+MaterialExpressionConstant3Vector.MaterialExpression=True
+MaterialExpressionVectorParameter.General=True
+MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
+MaterialExpressionVectorParameter.MaterialExpression=True
+MaterialExpressionVectorParameter.CustomPrimitiveData=True
+MaterialExpressionVectorParameter.ParameterCustomization=True
+K2Node_MakeStruct.PinOptions=True
+StaticMeshComponent.Materials=True
+SceneComponent.Variable=True
+SceneComponent.TransformCommon=True
+SceneComponent.Sockets=True
+SceneComponent.Rendering=True
+SceneComponent.ComponentTick=True
+SceneComponent.Tags=True
+SceneComponent.ComponentReplication=True
+SceneComponent.Activation=True
+SceneComponent.Cooking=True
+SceneComponent.Events=True
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter=0
@@ -2490,6 +2578,7 @@ None=======
 /Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager.BP_I_Doubt_It_Game_Manager=1
 /Engine/EditorBlueprintResources/StandardMacros.StandardMacros=1
 /Game/Shared_Game_Mechanics/BPI_Playing_Character.BPI_Playing_Character=1
+/Game/Modes_Instances/Modes/GM_Bar.GM_Bar=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2758,6 +2847,7 @@ bConvertSceneUnit=False
 LastLogListing=PIE
 
 [PlacementMode]
+RecentlyPlaced=/Game/Shared_Game_Mechanics/Cards/BP_CardPile.BP_CardPile;
 RecentlyPlaced=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager.BP_Turn_Manager;
 RecentlyPlaced=/Game/NPCs/BP_NPC.BP_NPC;
 RecentlyPlaced=/Game/Main_Game_Managers/Auction/BP_Auction_Game_Manager.BP_Auction_Game_Manager;
@@ -2777,8 +2867,11 @@ RecentlyPlaced=/Game/Shared_Game_Mechanics/Cards/Meshes/PLACEHOLDERS_SPADES_K.PL
 RecentlyPlaced=/Game/Shared_Game_Mechanics/Cards/Meshes/PLACEHOLDERS_SPADES_J.PLACEHOLDERS_SPADES_J;
 RecentlyPlaced=/Game/Shared_Game_Mechanics/Cards/Meshes/PLACEHOLDERS_SPADES_A.PLACEHOLDERS_SPADES_A;
 RecentlyPlaced=/Game/Shared_Game_Mechanics/Cards/Meshes/PLACEHOLDERS_SPADES_10.PLACEHOLDERS_SPADES_10;
-RecentlyPlaced=/Game/Shared_Game_Mechanics/Cards/Meshes/PLACEHOLDERS_SPADES_9.PLACEHOLDERS_SPADES_9;
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
+DeleteConfirmationVariable_Warning=False
+
+[DetailCategoriesAdvanced]
+EdGraph.Graph=True
 
