--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -281,14 +281,14 @@ UdpMessagingSettings=EnhancedInputDeveloperSettings.Modifier Default Values.Inpu
 WmfMediaSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap
 UserDefinedStruct=
 Struct_Card=
-PropertyWrapper=PropertyWrapper.DefaultValueCategory.All Cards
+PropertyWrapper=PropertyWrapper.DefaultValueCategory.All Cards,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision
 BP_Card_Dealer_C=PropertyWrapper.DefaultValueCategory.All Cards
 EdGraph=PropertyWrapper.DefaultValueCategory.All Cards
 K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.All Cards
 BP_Rat_Screw_Game_Manager_C=PropertyWrapper.DefaultValueCategory.All Cards
 BP_CardPile_C=PropertyWrapper.DefaultValueCategory.All Cards
 K2Node_Variable=PropertyWrapper.DefaultValueCategory.All Cards
-K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.All Cards
+K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.All Cards,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision
 EdGraphNode_Comment=PropertyWrapper.DefaultValueCategory.All Cards
 K2Node=PropertyWrapper.DefaultValueCategory.All Cards
 Deal To Players=PropertyWrapper.DefaultValueCategory.All Cards
@@ -302,15 +302,15 @@ K2Node_MacroInstance=PropertyWrapper.DefaultValueCategory.All Cards
 BPC_CurrentHand_C=PropertyWrapper.DefaultValueCategory.All Cards
 End Game=PropertyWrapper.DefaultValueCategory.All Cards
 End Game_6=PropertyWrapper.DefaultValueCategory.All Cards
-BP_NPC_C=PropertyWrapper.DefaultValueCategory.All Cards
-CapsuleComponent=PropertyWrapper.DefaultValueCategory.All Cards
-SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.All Cards
+BP_NPC_C=PropertyWrapper.DefaultValueCategory.All Cards,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision
+CapsuleComponent=
+SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.All Cards,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision
 Character=PropertyWrapper.DefaultValueCategory.All Cards
 K2Node_BreakStruct=K2Node_BreakStruct.PinOptions.ShowPinForProperties
 BP_Card_C=PropertyWrapper.DefaultValueCategory.All Cards
 Blueprint=PropertyWrapper.DefaultValueCategory.All Cards
 CharacterMovementComponent=PropertyWrapper.DefaultValueCategory.All Cards
-BP_Player_C=PropertyWrapper.DefaultValueCategory.All Cards
+BP_Player_C=PropertyWrapper.DefaultValueCategory.All Cards,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision
 Check If Game Over=PropertyWrapper.DefaultValueCategory.All Cards
 Check If Game Over_6=PropertyWrapper.DefaultValueCategory.All Cards
 BP_Turn_Manager_C=PropertyWrapper.DefaultValueCategory.All Cards
@@ -325,6 +325,11 @@ AddCard_1=PropertyWrapper.DefaultValueCategory.All Cards
 Start First Turn=PropertyWrapper.DefaultValueCategory.All Cards
 Start First Turn_4=PropertyWrapper.DefaultValueCategory.All Cards
 StaticMeshComponent=PropertyWrapper.DefaultValueCategory.All Cards
+BoxComponent=BoxComponent.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision
+K2Node_CustomEvent=PropertyWrapper.DefaultValueCategory.All Cards
+InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/Player/Input/Actions/IA_Interact.IA_Interact
+InputAction=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/Player/Input/Actions/IA_Interact.IA_Interact
+SphereComponent=PropertyWrapper.DefaultValueCategory.All Cards,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,SphereComponent.Collision.Collision
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Shared_Game_Mechanics/Cards
@@ -1503,8 +1508,8 @@ MetaSoundSettings="\"Object\" "
 NavigationSystemV1="\"Object\" "
 NavigationSystemBase="\"Object\" "
 NetworkSettings="\"Object\" "
-PhysicsSettings="\"Object\" "
-PhysicsSettingsCore="\"Object\" "
+PhysicsSettings="\"Object\" \"Object.ChaosPhysics.SolverOptions\" "
+PhysicsSettingsCore="\"Object\" \"Object.ChaosPhysics.SolverOptions\" "
 RendererSettings="\"Object\" "
 RendererOverrideSettings="\"Object\" "
 SlateSettings="\"Object\" "
@@ -1546,11 +1551,11 @@ FractureModeSettings="\"Object\" "
 GeometryCacheStreamerSettings="\"Object\" "
 GooglePADRuntimeSettings="\"Object\" "
 ImgMediaSettings="\"Object\" "
-ToolPresetProjectSettings="\"Object\" "
+ToolPresetProjectSettings="\"Object\" \"Object.Interactive Tool Presets.Interactive Tool Presets|Collections\" "
 LevelSequenceEditorSettings="\"Object\" "
 ModelingToolsEditorModeSettings="\"Object\" "
-ModelingComponentsSettings="\"Object\" "
-NiagaraSettings="\"Object\" "
+ModelingComponentsSettings="\"Object\" \"Object.Modeling Tools.Modeling Tools|New Mesh Objects\" "
+NiagaraSettings="\"Object\" \"Object.AsyncGpuTraceDI.NDICollisionQuery_AsyncGpuTraceProviderOrder\" "
 NiagaraEditorSettings="\"Object\" "
 PaperRuntimeSettings="\"Object\" "
 PythonScriptPluginSettings="\"Object\" "
@@ -1573,8 +1578,8 @@ EditPivotToolProperties="\"Object\" "
 InteractiveToolPropertySet="\"Object\" "
 EditPivotToolActionPropertySet="\"Object\" "
 TransformMeshesToolProperties="\"Object\" "
-InputAction="\"Object\" \"Object.Action.Triggers\" \"Object.Action.Triggers.Triggers[0]\" "
-DataAsset="\"Object\" \"Object.Action.Triggers\" \"Object.Action.Triggers.Triggers[0]\" "
+InputAction="\"Object\" "
+DataAsset="\"Object\" "
 UserDefinedEnum="\"Object\" "
 Enum="\"Object\" "
 Field="\"Object\" "
@@ -1608,16 +1613,23 @@ MaterialExpressionVectorParameter="\"Object\" "
 MaterialExpressionParameter="\"Object\" "
 K2Node_MakeStruct="\"Object\" "
 K2Node_StructMemberSet="\"Object\" "
+BoxComponent="\"Object\" \"Object.Collision.BodyInstance\" "
+RecastNavMesh="\"Object.Display.TileGenerationDebug\" "
+NavigationData="\"Object.Display.TileGenerationDebug\" "
+BP_Player_C="\"Object\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Pawn.Pawn|Input\" \"Object.Replication.ReplicatedMovement\" "
+InputMappingContext="\"Object\" \"Object.Mappings.Mappings.Mappings[14]\" \"Object.Mappings.Mappings.Mappings[14].Triggers\" "
+SphereComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=EnumEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -1638,46 +1650,40 @@ RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 None=======
-OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager.BP_Turn_Manager
-OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BP_Card_Dealer.BP_Card_Dealer
-OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BP_CardPile.BP_CardPile
 OpenAssetsAtExit=/Game/NPCs/BP_NPC.BP_NPC
-OpenAssetsAtExit=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager.BP_I_Doubt_It_Game_Manager
-OpenAssetsAtExit=/Game/Modes_Instances/Modes/GM_Bar.GM_Bar
-OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Enum_All_Game_Names.Enum_All_Game_Names
 OpenAssetsAtExit=/Game/Player/BP_Player.BP_Player
 OpenAssetsAtExit=/Game/Shared_Game_Mechanics/BPI_Playing_Character.BPI_Playing_Character
+OpenAssetsAtExit=/Game/Player/Input/IMC/IMC_Bar.IMC_Bar
 OpenAssetsAtExit=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager.BP_Rat_Screw_Game_Manager
-OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BP_Card.BP_Card
-OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/M_Card_Test.M_Card_Test
-OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/DT_Cards.DT_Cards
+OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BP_Card_Dealer.BP_Card_Dealer
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Shared_Game_Mechanics/Cards/DT_Cards
-MRUItem1=/Game/Shared_Game_Mechanics/Cards/M_Card_Test
-MRUItem2=/Game/Shared_Game_Mechanics/Cards/BP_Card
-MRUItem3=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
-MRUItem4=/Game/Shared_Game_Mechanics/BPI_Playing_Character
-MRUItem5=/Game/Player/BP_Player
-MRUItem6=/Game/Shared_Game_Mechanics/Enum_All_Game_Names
-MRUItem7=/Game/Modes_Instances/Modes/GM_Bar
-MRUItem8=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
-MRUItem9=/Game/NPCs/BP_NPC
-MRUItem10=/Game/Shared_Game_Mechanics/Cards/BP_CardPile
-MRUItem11=/Game/Shared_Game_Mechanics/Cards/BP_Card_Dealer
-MRUItem12=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager
-MRUItem13=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem14=/Game/Shared_Game_Mechanics/BPC_CurrentHand
-MRUItem15=/Game/Shared_Game_Mechanics/Cards/BPI_Card
-MRUItem16=/Game/Main_Game_Managers/Auction/BP_Auction_Game_Manager
-MRUItem17=/Game/Shared_Game_Mechanics/Cards/Enum_Card_Suits
-MRUItem18=/Game/Shared_Game_Mechanics/Cards/Enum_Card_Names
-MRUItem19=/Game/Shared_Game_Mechanics/Cards/Struct_Card
-MRUItem20=/Game/Main_Game_Managers/Enum_Main_Game_Names
-MRUItem21=/Game/Mini_Games/Enum_Mini_Game_Names
-MRUItem22=/Game/Shared_Game_Mechanics/Turn_Taking/Enum_Turn_Taking_Methods
-MRUItem23=/Game/Player/Input/Actions/IA_Jump
-MRUItem24=/Game/Maps/ThirdPersonMap
+MRUItem0=/Game/Shared_Game_Mechanics/Cards/BP_Card_Dealer
+MRUItem1=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
+MRUItem2=/Game/Player/Input/IMC/IMC_Bar
+MRUItem3=/Game/Shared_Game_Mechanics/BPI_Playing_Character
+MRUItem4=/Game/Player/BP_Player
+MRUItem5=/Game/NPCs/BP_NPC
+MRUItem6=/Game/Shared_Game_Mechanics/Cards/DT_Cards
+MRUItem7=/Game/Shared_Game_Mechanics/Cards/M_Card_Test
+MRUItem8=/Game/Shared_Game_Mechanics/Cards/BP_Card
+MRUItem9=/Game/Shared_Game_Mechanics/Enum_All_Game_Names
+MRUItem10=/Game/Modes_Instances/Modes/GM_Bar
+MRUItem11=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
+MRUItem12=/Game/Shared_Game_Mechanics/Cards/BP_CardPile
+MRUItem13=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager
+MRUItem14=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem15=/Game/Shared_Game_Mechanics/BPC_CurrentHand
+MRUItem16=/Game/Shared_Game_Mechanics/Cards/BPI_Card
+MRUItem17=/Game/Main_Game_Managers/Auction/BP_Auction_Game_Manager
+MRUItem18=/Game/Shared_Game_Mechanics/Cards/Enum_Card_Suits
+MRUItem19=/Game/Shared_Game_Mechanics/Cards/Enum_Card_Names
+MRUItem20=/Game/Shared_Game_Mechanics/Cards/Struct_Card
+MRUItem21=/Game/Main_Game_Managers/Enum_Main_Game_Names
+MRUItem22=/Game/Mini_Games/Enum_Mini_Game_Names
+MRUItem23=/Game/Shared_Game_Mechanics/Turn_Taking/Enum_Turn_Taking_Methods
+MRUItem24=/Game/Player/Input/Actions/IA_Jump
+MRUItem25=/Game/Maps/ThirdPersonMap
 
 [DetailCategories]
 BP_ThirdPersonCharacter_C.TransformCommon=True
@@ -2550,6 +2556,68 @@ SceneComponent.ComponentReplication=True
 SceneComponent.Activation=True
 SceneComponent.Cooking=True
 SceneComponent.Events=True
+BoxComponent.Variable=True
+BoxComponent.TransformCommon=True
+BoxComponent.Sockets=True
+BoxComponent.Shape=True
+BoxComponent.Navigation=True
+BoxComponent.HLOD=True
+BoxComponent.ComponentTick=True
+BoxComponent.Rendering=True
+BoxComponent.PathTracing=True
+BoxComponent.Physics=True
+BoxComponent.Collision=True
+BoxComponent.Tags=True
+BoxComponent.ComponentReplication=True
+BoxComponent.Cooking=True
+BoxComponent.Events=True
+BoxComponent.Mobile=True
+BoxComponent.RayTracing=True
+BoxComponent.Replication=True
+UMGEditorProjectSettings.Designer =True
+BP_Player_C.Default=True
+BP_Player_C.SkeletalMesh=True
+BP_Player_C.Optimization=True
+BP_Player_C.LOD=True
+BP_Player_C.MaterialParameters=True
+BP_Player_C.TextureStreaming=True
+BP_Player_C.LevelInstance=True
+CapsuleComponent.Navigation=True
+CapsuleComponent.Collision=True
+SkeletalMeshComponent.SkeletalMesh=True
+CapsuleComponent.Variable=True
+CapsuleComponent.TransformCommon=True
+CapsuleComponent.Sockets=True
+CapsuleComponent.Shape=True
+CapsuleComponent.HLOD=True
+CapsuleComponent.ComponentTick=True
+CapsuleComponent.Rendering=True
+CapsuleComponent.PathTracing=True
+CapsuleComponent.Physics=True
+CapsuleComponent.Tags=True
+CapsuleComponent.ComponentReplication=True
+CapsuleComponent.Cooking=True
+CapsuleComponent.Events=True
+InputMappingContext.Mappings=True
+InputMappingContext.Description=True
+SphereComponent.Variable=True
+SphereComponent.TransformCommon=True
+SphereComponent.Sockets=True
+SphereComponent.Shape=True
+SphereComponent.Navigation=True
+SphereComponent.HLOD=True
+SphereComponent.ComponentTick=True
+SphereComponent.Rendering=True
+SphereComponent.PathTracing=True
+SphereComponent.Physics=True
+SphereComponent.Collision=True
+SphereComponent.Tags=True
+SphereComponent.ComponentReplication=True
+SphereComponent.Cooking=True
+SphereComponent.Events=True
+SkeletalMeshComponent.Materials=True
+BP_NPC_C.Materials=True
+BP_Player_C.DataLayers=True
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter=0
@@ -2727,6 +2795,19 @@ InstalledPlugins=WMFCodecs
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
 GameMapsSettings=True
+AISystem=True
+ConsoleSettings=True
+CrowdManager=True
+GarbageCollectionSettings=True
+Engine=True
+RecastNavMesh=True
+PhysicsSettings=True
+SourceControlPreferences=True
+DataflowSettings=True
+ToolPresetProjectSettings=True
+ModelingComponentsSettings=True
+NiagaraSettings=True
+CollisionProfile=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -2874,4 +2955,6 @@ DeleteConfirmationVariable_Warning=False
 
 [DetailCategoriesAdvanced]
 EdGraph.Graph=True
+BoxComponent.Collision=False
+SphereComponent.Collision=False
 
