--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -316,7 +316,7 @@ BP_Player_C=PropertyWrapper.DefaultValueCategory.All Cards,BP_Player_C.Transform
 Check If Game Over=PropertyWrapper.DefaultValueCategory.All Cards
 Check If Game Over_6=PropertyWrapper.DefaultValueCategory.All Cards
 BP_Turn_Manager_C=PropertyWrapper.DefaultValueCategory.All Cards
-StaticMeshActor=PropertyWrapper.DefaultValueCategory.All Cards
+StaticMeshActor=PropertyWrapper.DefaultValueCategory.All Cards,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision
 Setup Main Game=PropertyWrapper.DefaultValueCategory.All Cards
 Setup Main Game_2=PropertyWrapper.DefaultValueCategory.All Cards
 Add Card To Pile=PropertyWrapper.DefaultValueCategory.All Cards
@@ -1686,23 +1686,23 @@ LogVisualizerSettings="\"Object\" "
 CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=DataTableEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -1716,32 +1716,23 @@ RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 None=======
-OpenAssetsAtExit=/Game/Modes_Instances/Modes/GM_Bar.GM_Bar
-OpenAssetsAtExit=/Game/NPCs/BP_NPC.BP_NPC
 OpenAssetsAtExit=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager.BP_I_Doubt_It_Game_Manager
-OpenAssetsAtExit=/Game/Player/BP_Player.BP_Player
-OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager.BP_Turn_Manager
-OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BP_Card.BP_Card
-OpenAssetsAtExit=/Game/Shared_Game_Mechanics/BPI_Playing_Character.BPI_Playing_Character
-OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BP_Card_Dealer.BP_Card_Dealer
-OpenAssetsAtExit=/Game/Shared_Game_Mechanics/BPC_CurrentHand.BPC_CurrentHand
 OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BP_CardPile.BP_CardPile
-OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/DT_Cards.DT_Cards
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Shared_Game_Mechanics/Cards/DT_Cards
+MRUItem0=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
 MRUItem1=/Game/Shared_Game_Mechanics/Cards/BP_CardPile
-MRUItem2=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager
-MRUItem3=/Game/Shared_Game_Mechanics/Cards/BP_Card
-MRUItem4=/Game/Shared_Game_Mechanics/BPI_Playing_Character
-MRUItem5=/Game/Shared_Game_Mechanics/Cards/BP_Card_Dealer
-MRUItem6=/Game/Shared_Game_Mechanics/BPC_CurrentHand
-MRUItem7=/Game/Player/Input/IMC/IMC_Rat_Screw
-MRUItem8=/Game/Player/Input/IMC/IMC_Pool
-MRUItem9=/Game/Player/Input/IMC/IMC_I_Doubt_It
-MRUItem10=/Game/Player/Input/IMC/IMC_Darts
-MRUItem11=/Game/Player/Input/IMC/IMC_Auction
-MRUItem12=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
+MRUItem2=/Game/Shared_Game_Mechanics/Cards/DT_Cards
+MRUItem3=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager
+MRUItem4=/Game/Shared_Game_Mechanics/Cards/BP_Card
+MRUItem5=/Game/Shared_Game_Mechanics/BPI_Playing_Character
+MRUItem6=/Game/Shared_Game_Mechanics/Cards/BP_Card_Dealer
+MRUItem7=/Game/Shared_Game_Mechanics/BPC_CurrentHand
+MRUItem8=/Game/Player/Input/IMC/IMC_Rat_Screw
+MRUItem9=/Game/Player/Input/IMC/IMC_Pool
+MRUItem10=/Game/Player/Input/IMC/IMC_I_Doubt_It
+MRUItem11=/Game/Player/Input/IMC/IMC_Darts
+MRUItem12=/Game/Player/Input/IMC/IMC_Auction
 MRUItem13=/Game/Player/BP_Player
 MRUItem14=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
 MRUItem15=/Game/NPCs/BP_NPC
@@ -2977,17 +2968,17 @@ LogVisualizerSettings.VisualLogger=True
 /Game/ThirdPerson/Blueprints/BP_Player.BP_Player=0
 /Game/ThirdPerson/Blueprints/GM_Bar.GM_Bar=0
 /Game/NPCs/BP_NPC.BP_NPC=0
-/Game/NPCs/BP_NPC.BP_NPC=1
+/Game/NPCs/BP_NPC.BP_NPC=0
 /Game/Player/Input/Actions/IA_Jump.IA_Jump=0
 /Game/Player/Input/Actions/IA_Jump.IA_Jump=1
 /Game/Player/BP_Player.BP_Player=0
-/Game/Player/BP_Player.BP_Player=1
+/Game/Player/BP_Player.BP_Player=0
 /Game/Shared_Game_Mechanics/Turn_Taking/Enum_Turn_Taking_Methods.Enum_Turn_Taking_Methods=1
-/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager.BP_Turn_Manager=1
+/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager.BP_Turn_Manager=0
 None=======
 /Game/Shared_Game_Mechanics/Cards/BP_Card.BP_Card=0
 /Game/Shared_Game_Mechanics/Cards/Struct_Card.Struct_Card=1
-/Game/Shared_Game_Mechanics/Cards/DT_Cards.DT_Cards=1
+/Game/Shared_Game_Mechanics/Cards/DT_Cards.DT_Cards=0
 /Game/Shared_Game_Mechanics/Cards/BPI_Card.BPI_Card=0
 /Game/Shared_Game_Mechanics/Cards/Enum_Card_Names.Enum_Card_Names=1
 /Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager.BP_Rat_Screw_Game_Manager=0
@@ -2996,9 +2987,9 @@ None=======
 /Game/Shared_Game_Mechanics/Cards/Enum_Card_Suits.Enum_Card_Suits=1
 /Game/Shared_Game_Mechanics/Cards/BP_CardPile.BP_CardPile=0
 /Game/Main_Game_Managers/Auction/BP_Auction_Game_Manager.BP_Auction_Game_Manager=1
-/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager.BP_I_Doubt_It_Game_Manager=1
+/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager.BP_I_Doubt_It_Game_Manager=0
 /Engine/EditorBlueprintResources/StandardMacros.StandardMacros=1
-/Game/Shared_Game_Mechanics/BPI_Playing_Character.BPI_Playing_Character=1
+/Game/Shared_Game_Mechanics/BPI_Playing_Character.BPI_Playing_Character=0
 /Game/Modes_Instances/Modes/GM_Bar.GM_Bar=0
 /Game/Player/Input/IMC/IMC_Auction.IMC_Auction=0
 /Game/Player/Input/IMC/IMC_Darts.IMC_Darts=0
