Commenting some stuff i did before

--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -295,7 +295,7 @@ BP_CardPile_C=PropertyWrapper.DefaultValueCategory.All Cards,BP_Player_C.Transfo
 K2Node_Variable=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 EdGraphNode_Comment=PropertyWrapper.DefaultValueCategory.All Cards
-K2Node=PropertyWrapper.DefaultValueCategory.All Cards
+K2Node=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 Deal To Players=PropertyWrapper.DefaultValueCategory.All Cards
 Deal To Players_5=PropertyWrapper.DefaultValueCategory.All Cards
 Deal Cards=PropertyWrapper.DefaultValueCategory.All Cards
@@ -1728,22 +1728,23 @@ OpenAssetsAtExit=/Game/Shared_Game_Mechanics/BPI_Playing_Character.BPI_Playing_C
 OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BP_Card.BP_Card
 OpenAssetsAtExit=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager.BP_I_Doubt_It_Game_Manager
 OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BP_CardPile.BP_CardPile
+OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager.BP_Turn_Manager
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Player/Input/Actions/Card_Selection/IA_Select_Card
-MRUItem1=/Game/Shared_Game_Mechanics/Cards/BP_CardPile
-MRUItem2=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
-MRUItem3=/Game/Shared_Game_Mechanics/Cards/BP_Card
-MRUItem4=/Game/Shared_Game_Mechanics/BPI_Playing_Character
-MRUItem5=/Game/Player/Input/IMC/IMC_I_Doubt_It
-MRUItem6=/Game/Player/BP_Player
-MRUItem7=/Game/Shared_Game_Mechanics/BPC_CurrentHand
-MRUItem8=/Game/Shared_Game_Mechanics/Cards/BPI_Card
-MRUItem9=/Game/Player/Input/IMC/IMC_Bar
-MRUItem10=/Game/Player/Input/Actions/Card_Selection/IA_Previous_Card
-MRUItem11=/Game/Player/Input/Actions/Card_Selection/IA_Next_Card
-MRUItem12=/Game/Shared_Game_Mechanics/Cards/DT_Cards
-MRUItem13=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager
+MRUItem0=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager
+MRUItem1=/Game/Player/Input/Actions/Card_Selection/IA_Select_Card
+MRUItem2=/Game/Shared_Game_Mechanics/Cards/BP_CardPile
+MRUItem3=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
+MRUItem4=/Game/Shared_Game_Mechanics/Cards/BP_Card
+MRUItem5=/Game/Shared_Game_Mechanics/BPI_Playing_Character
+MRUItem6=/Game/Player/Input/IMC/IMC_I_Doubt_It
+MRUItem7=/Game/Player/BP_Player
+MRUItem8=/Game/Shared_Game_Mechanics/BPC_CurrentHand
+MRUItem9=/Game/Shared_Game_Mechanics/Cards/BPI_Card
+MRUItem10=/Game/Player/Input/IMC/IMC_Bar
+MRUItem11=/Game/Player/Input/Actions/Card_Selection/IA_Previous_Card
+MRUItem12=/Game/Player/Input/Actions/Card_Selection/IA_Next_Card
+MRUItem13=/Game/Shared_Game_Mechanics/Cards/DT_Cards
 MRUItem14=/Game/Shared_Game_Mechanics/Cards/BP_Card_Dealer
 MRUItem15=/Game/Player/Input/IMC/IMC_Rat_Screw
 MRUItem16=/Game/Player/Input/IMC/IMC_Pool
