Card shaking. Card hovering and selecting update. Sorted input actions. New input action end turn. Modular max amount of cards selection.
New function in card interface for card shaking which is used to show when a selected card is hovered and is also used when selecting more cards than can be selected.
Card shaking uses relative rotation which is currently always 0 but if this changes for whatever reason then this will need to be changed in the shake card event. Also uses timeline obviously to lerp the rotation.

Organised the input actions.
Created a new input action for ending a turn.
This has replaced auto completion of turn for players in the take turn function.
This doesn't really do anything rn but is setup to use the different game names using the game mode. Also new bool in player which is if it this player's turn which allows them to end their turn. So can still do other actions like hovering and selecting but can't finish their turn until it is their turn.

Using a game mode to get current game name to set modular max amount of cards to select in select card function in currenthand component so can easily change it since different games have different max amounts between auction and I doubt it.

Fixed issue with cards not going to full selection height which is fixed now by setting the relative location before selecting to be the relative location before hovering plus the hover amount so it will always go to the full select amount.

--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -300,7 +300,7 @@ Deal To Players=PropertyWrapper.DefaultValueCategory.All Cards
 Deal To Players_5=PropertyWrapper.DefaultValueCategory.All Cards
 Deal Cards=PropertyWrapper.DefaultValueCategory.All Cards
 Deal Cards_4=PropertyWrapper.DefaultValueCategory.All Cards
-SceneComponent=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
+SceneComponent=
 BillboardComponent=PropertyWrapper.DefaultValueCategory.All Cards
 BP_I_Doubt_It_Game_Manager_C=PropertyWrapper.DefaultValueCategory.All Cards,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision
 K2Node_MacroInstance=PropertyWrapper.DefaultValueCategory.All Cards
@@ -308,7 +308,7 @@ BPC_CurrentHand_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper
 End Game=PropertyWrapper.DefaultValueCategory.All Cards
 End Game_6=PropertyWrapper.DefaultValueCategory.All Cards
 BP_NPC_C=PropertyWrapper.DefaultValueCategory.All Cards,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision
-CapsuleComponent=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
+CapsuleComponent=
 SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 Character=PropertyWrapper.DefaultValueCategory.All Cards
 K2Node_BreakStruct=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.All Cards,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision
@@ -323,7 +323,7 @@ StaticMeshActor=PropertyWrapper.DefaultValueCategory.All Cards,BP_Player_C.Trans
 Setup Main Game=PropertyWrapper.DefaultValueCategory.All Cards
 Setup Main Game_2=PropertyWrapper.DefaultValueCategory.All Cards
 Add Card To Pile=PropertyWrapper.DefaultValueCategory.All Cards
-GM_Bar_C=PropertyWrapper.DefaultValueCategory.All Cards,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision
+GM_Bar_C=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 End Player Turn=PropertyWrapper.DefaultValueCategory.All Cards
 AddCard=PropertyWrapper.DefaultValueCategory.All Cards
 AddCard_1=PropertyWrapper.DefaultValueCategory.All Cards
@@ -331,13 +331,14 @@ Start First Turn=PropertyWrapper.DefaultValueCategory.All Cards
 Start First Turn_4=PropertyWrapper.DefaultValueCategory.All Cards
 StaticMeshComponent=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 BoxComponent=BoxComponent.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision
-K2Node_CustomEvent=PropertyWrapper.DefaultValueCategory.All Cards
-InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/Player/Input/Actions/IA_Interact.IA_Interact
-InputAction=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/Player/Input/Actions/IA_Interact.IA_Interact
+K2Node_CustomEvent=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
+InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/Player/Input/Actions/IA_Interact.IA_Interact,InputMappingContext.Mappings.ActionMappings./Game/Player/Input/Actions/Card_Selection/IA_Select_Card.IA_Select_Card
+InputAction=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/Player/Input/Actions/IA_Interact.IA_Interact,InputMappingContext.Mappings.ActionMappings./Game/Player/Input/Actions/Card_Selection/IA_Select_Card.IA_Select_Card
 SphereComponent=PropertyWrapper.DefaultValueCategory.All Cards,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,SphereComponent.Collision.Collision
 Set Current Playing Game=PropertyWrapper.DefaultValueCategory.All Cards,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision
 TextRenderComponent=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
-K2Node_EnhancedInputAction=PropertyWrapper.DefaultValueCategory.All Cards,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision
+K2Node_EnhancedInputAction=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
+K2Node_InputDebugKey=PropertyWrapper.DefaultValueCategory.All Cards,PropertyWrapper.DefaultValueCategory.Card Info,BP_Player_C.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Player/Input/IMC
@@ -1625,7 +1626,7 @@ BoxComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 RecastNavMesh="\"Object.Display.TileGenerationDebug\" "
 NavigationData="\"Object.Display.TileGenerationDebug\" "
 BP_Player_C="\"Object\" "
-InputMappingContext="\"Object\" \"Object.Mappings.Mappings.Mappings[2]\" \"Object.Mappings.Mappings.Mappings[3]\" \"Object.Mappings.Mappings.Mappings[4]\" "
+InputMappingContext="\"Object\" \"Object.Mappings.Mappings.Mappings[2]\" \"Object.Mappings.Mappings.Mappings[3]\" \"Object.Mappings.Mappings.Mappings[4]\" \"Object.Mappings.Mappings.Mappings[5]\" "
 SphereComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 ArrowComponent="\"Object\" "
 TextRenderComponent="\"Object\" "
@@ -1691,6 +1692,8 @@ CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -1700,7 +1703,6 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=GenericAssetEditor
@@ -1718,7 +1720,6 @@ RecentAssetEditors=EnumEditor
 RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=DataTableEditor
 RecentAssetEditors=DataTableEditor
-RecentAssetEditors=
 None=======
 OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BPI_Card.BPI_Card
 OpenAssetsAtExit=/Game/Shared_Game_Mechanics/BPC_CurrentHand.BPC_CurrentHand
@@ -1731,36 +1732,36 @@ OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Cards/BP_CardPile.BP_CardPile
 OpenAssetsAtExit=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager.BP_Turn_Manager
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager
-MRUItem1=/Game/Player/Input/Actions/Card_Selection/IA_Select_Card
-MRUItem2=/Game/Shared_Game_Mechanics/Cards/BP_CardPile
-MRUItem3=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
-MRUItem4=/Game/Shared_Game_Mechanics/Cards/BP_Card
-MRUItem5=/Game/Shared_Game_Mechanics/BPI_Playing_Character
-MRUItem6=/Game/Player/Input/IMC/IMC_I_Doubt_It
-MRUItem7=/Game/Player/BP_Player
-MRUItem8=/Game/Shared_Game_Mechanics/BPC_CurrentHand
-MRUItem9=/Game/Shared_Game_Mechanics/Cards/BPI_Card
-MRUItem10=/Game/Player/Input/IMC/IMC_Bar
-MRUItem11=/Game/Player/Input/Actions/Card_Selection/IA_Previous_Card
-MRUItem12=/Game/Player/Input/Actions/Card_Selection/IA_Next_Card
-MRUItem13=/Game/Shared_Game_Mechanics/Cards/DT_Cards
-MRUItem14=/Game/Shared_Game_Mechanics/Cards/BP_Card_Dealer
-MRUItem15=/Game/Player/Input/IMC/IMC_Rat_Screw
-MRUItem16=/Game/Player/Input/IMC/IMC_Pool
-MRUItem17=/Game/Player/Input/IMC/IMC_Darts
-MRUItem18=/Game/Player/Input/IMC/IMC_Auction
-MRUItem19=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
-MRUItem20=/Game/NPCs/BP_NPC
-MRUItem21=/Game/Modes_Instances/Modes/GM_Bar
-MRUItem22=/Game/Shared_Game_Mechanics/Cards/M_Card_Test
-MRUItem23=/Game/Shared_Game_Mechanics/Enum_All_Game_Names
-MRUItem24=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem25=/Game/Main_Game_Managers/Auction/BP_Auction_Game_Manager
-MRUItem26=/Game/Shared_Game_Mechanics/Cards/Enum_Card_Suits
-MRUItem27=/Game/Shared_Game_Mechanics/Cards/Enum_Card_Names
-MRUItem28=/Game/Shared_Game_Mechanics/Cards/Struct_Card
-MRUItem29=/Game/Main_Game_Managers/Enum_Main_Game_Names
+MRUItem0=/Game/Player/Input/Actions/IA_End_Turn
+MRUItem1=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager
+MRUItem2=/Game/Player/Input/Actions/Card_Selection/IA_Select_Card
+MRUItem3=/Game/Shared_Game_Mechanics/Cards/BP_CardPile
+MRUItem4=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
+MRUItem5=/Game/Shared_Game_Mechanics/Cards/BP_Card
+MRUItem6=/Game/Shared_Game_Mechanics/BPI_Playing_Character
+MRUItem7=/Game/Player/Input/IMC/IMC_I_Doubt_It
+MRUItem8=/Game/Player/BP_Player
+MRUItem9=/Game/Shared_Game_Mechanics/BPC_CurrentHand
+MRUItem10=/Game/Shared_Game_Mechanics/Cards/BPI_Card
+MRUItem11=/Game/Player/Input/IMC/IMC_Bar
+MRUItem12=/Game/Player/Input/Actions/Card_Selection/IA_Previous_Card
+MRUItem13=/Game/Player/Input/Actions/Card_Selection/IA_Next_Card
+MRUItem14=/Game/Shared_Game_Mechanics/Cards/DT_Cards
+MRUItem15=/Game/Shared_Game_Mechanics/Cards/BP_Card_Dealer
+MRUItem16=/Game/Player/Input/IMC/IMC_Rat_Screw
+MRUItem17=/Game/Player/Input/IMC/IMC_Pool
+MRUItem18=/Game/Player/Input/IMC/IMC_Darts
+MRUItem19=/Game/Player/Input/IMC/IMC_Auction
+MRUItem20=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
+MRUItem21=/Game/NPCs/BP_NPC
+MRUItem22=/Game/Modes_Instances/Modes/GM_Bar
+MRUItem23=/Game/Shared_Game_Mechanics/Cards/M_Card_Test
+MRUItem24=/Game/Shared_Game_Mechanics/Enum_All_Game_Names
+MRUItem25=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem26=/Game/Main_Game_Managers/Auction/BP_Auction_Game_Manager
+MRUItem27=/Game/Shared_Game_Mechanics/Cards/Enum_Card_Suits
+MRUItem28=/Game/Shared_Game_Mechanics/Cards/Enum_Card_Names
+MRUItem29=/Game/Shared_Game_Mechanics/Cards/Struct_Card
 
 [DetailCategories]
 BP_ThirdPersonCharacter_C.TransformCommon=True
@@ -3166,6 +3167,8 @@ RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/Control
 /Game/NPCs/Animations/Animation_Blueprints=(R=1.000000,G=0.927083,B=0.927083,A=1.000000)
 /Game/NPCs/Animations=(R=0.072971,G=0.309633,B=0.467784,A=1.000000)
 /Game/Misc_Mechanics/Drink_Board=(R=0.160065,G=0.467784,B=0.099351,A=1.000000)
+/Game/Player/Input/Actions/Card_Selection=(R=0.275528,G=0.167328,B=0.467784,A=1.000000)
+/Game/Player/Input/Actions/Bar_General=(R=1.000000,G=0.927083,B=0.927083,A=1.000000)
 
 [PluginBrowser]
 InstalledPlugins=VisualStudioTools
